--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -11,7 +11,6 @@
    *   Set-ExecutionPolicy -ExecutionPolicy Unrestricted -Scope CurrentUser // WIndows virtual
    *=>
    */
-
   "workbench.colorTheme": "Modern Oranges Vibrate with gray background",
   "workbench.iconTheme": "bearded-icons",
   "workbench.productIconTheme": "fluent-icons",
@@ -37,7 +36,9 @@
   },
   "python.languageServer": "Pylance",
   "python.formatting.provider": "autopep8",
-  "python.formatting.autopep8Args": ["--indent-size=4"],
+  "python.formatting.autopep8Args": [
+    "--indent-size=4"
+  ],
   "python.linting.pylintEnabled": true,
   "python.linting.pylintArgs": [
     "--load-plugins=pylint_django",
