--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -217,6 +217,13 @@ kitty_mod ctrl+shift
 # map kitty_mod+home scroll_home
 # map cmd+home       scroll_home
 
+map kitty_mod+left resize_window narrower
+map kitty_mod+right resize_window wider
+map kitty_mod+up resize_window taller
+map kitty_mod+down resize_window shorter 3
+# reset all windows in the tab to default sizes
+map kitty_mod+home resize_window reset
+
 #: Scroll to bottom
 
 # map kitty_mod+end scroll_end
@@ -359,6 +366,8 @@ kitty_mod ctrl+shift
 
 #map kitty_mod+2 second_window
 #map cmd+2       second_window
+
+
 
 #: Third window
 
